--- a/2_model_template.qmd
+++ b/2_model_template.qmd
@@ -23,6 +23,7 @@ library(ggplot2)
 library(here)
 library(plotly)
 library(readr)
+library(stringr)
 library(tidyr)
 
 theme_set(theme_light())
@@ -92,6 +93,12 @@ out <- get_outputs(sim_folder = sim_path) %>%
     C,
     status
   ) 
+
+out_long <- out %>% 
+  pivot_longer(
+    cols = contains("temperature"), values_to = "value",
+    names_to = "variable"
+  )
 ```
 
 # Air Temperature to Water Temperature Model for Pockwock Lake
@@ -110,11 +117,7 @@ Average lake depth: `r params$depth_m` m
 #| warning: false
 #| fig-height: 5.5
 
-p <- out %>% 
-  pivot_longer(
-    cols = contains("temperature"), values_to = "value",
-    names_to = "variable"
-  ) %>% 
+p <- out_long %>% 
   filter(variable != "simulated_water_temperature") %>% 
   ggplot(aes(timestamp_ast, value, color = status)) +
   geom_point(size = 0.5) +
@@ -146,15 +149,30 @@ plot_param(sim_folder = sim_path) +
 #| warning: false
 #| fig-height: 5.5
 
-p <- ggplot(out) +
-  geom_line(
-    aes(timestamp_ast, simulated_water_temperature, colour = 'Simulated'), linewidth = 0.75
-  ) +
-  geom_point(
-    aes(timestamp_ast, observed_water_temperature, colour = 'Observed'), size = 0.75
-  ) +
+# p <- ggplot(out) +
+#   geom_line(
+#     aes(timestamp_ast, simulated_water_temperature, colour = 'Simulated'), linewidth = 0.75
+#   ) +
+#   geom_point(
+#     aes(timestamp_ast, observed_water_temperature, colour = 'Observed'), size = 0.75
+#   ) +
+#   scale_color_manual(
+#     "Water\nTemperature", values = c("#1B9E77", "#E7298A")
+#   ) +
+#   ylab('Temperature (\u00B0C)') +
+#   facet_wrap(~status, nrow = 2, scales = "free_x") +
+#   theme(axis.title.x = element_blank())
+
+p <- out_long %>% 
+  mutate(
+    variable = str_remove(variable, "_temperature"),
+    variable = str_replace(variable, "_", " "),
+    variable = str_to_title(variable)
+  ) %>% 
+  ggplot(aes(timestamp_ast, value, col = variable)) +
+  geom_line() +
   scale_color_manual(
-    "Water\nTemperature", values = c("#1B9E77", "#E7298A")
+    "Temperature", values = c("darkgrey", "#1B9E77", "#E7298A")
   ) +
   ylab('Temperature (\u00B0C)') +
   facet_wrap(~status, nrow = 2, scales = "free_x") +
