--- a/2_model_template.qmd
+++ b/2_model_template.qmd
@@ -26,6 +26,10 @@ library(readr)
 library(stringr)
 library(tidyr)
 
+source(here("functions/generate_figures.R"))
+source(here("functions/generate_tables.R"))
+source(here("functions/extract_calibration_output.R"))
+
 theme_set(theme_light())
 
 dt_options <- list(
@@ -119,12 +123,7 @@ Average lake depth: `r params$depth_m` m
 
 p <- out_long %>% 
   filter(variable != "simulated_water_temperature") %>% 
-  ggplot(aes(timestamp_ast, value, color = status)) +
-  geom_point(size = 0.5) +
-  scale_color_manual(values = c("#D95F02", "#7570B3")) +
-  ylab('Temperature (\u00B0C)') +
-  facet_wrap(~variable, ncol = 1, scales = "free") +
-  theme(axis.title.x = element_blank())
+  aw_plot_calval() 
 
 ggplotly(p)
 ```
@@ -149,34 +148,7 @@ plot_param(sim_folder = sim_path) +
 #| warning: false
 #| fig-height: 5.5
 
-# p <- ggplot(out) +
-#   geom_line(
-#     aes(timestamp_ast, simulated_water_temperature, colour = 'Simulated'), linewidth = 0.75
-#   ) +
-#   geom_point(
-#     aes(timestamp_ast, observed_water_temperature, colour = 'Observed'), size = 0.75
-#   ) +
-#   scale_color_manual(
-#     "Water\nTemperature", values = c("#1B9E77", "#E7298A")
-#   ) +
-#   ylab('Temperature (\u00B0C)') +
-#   facet_wrap(~status, nrow = 2, scales = "free_x") +
-#   theme(axis.title.x = element_blank())
-
-p <- out_long %>% 
-  mutate(
-    variable = str_remove(variable, "_temperature"),
-    variable = str_replace(variable, "_", " "),
-    variable = str_to_title(variable)
-  ) %>% 
-  ggplot(aes(timestamp_ast, value, col = variable)) +
-  geom_line() +
-  scale_color_manual(
-    "Temperature", values = c("darkgrey", "#1B9E77", "#E7298A")
-  ) +
-  ylab('Temperature (\u00B0C)') +
-  facet_wrap(~status, nrow = 2, scales = "free_x") +
-  theme(axis.title.x = element_blank())
+p <- aw_plot_model_ts(out_long) 
 
 ggplotly(p)
 ```
@@ -189,11 +161,7 @@ Grey line shows the 1:1 line.
 #| warning: false
 #| fig-height: 5.5
 
-p <- ggplot(out, aes(observed_water_temperature, simulated_water_temperature)) +
-  geom_point(col = "#7570B3") +
-  geom_abline(slope = 1, intercept = 0, col = "darkgrey", linewidth = 1.5) +
-  facet_wrap(~status, nrow = 2) +
-  theme(panel.spacing.y = unit(2, "lines"))
+p <- aw_plot_correlation(out)
 
 ggplotly(p)
 ```
@@ -206,41 +174,7 @@ ggplotly(p)
 ```{r}
 #| message: false
 
-tss <- out %>% 
-  pivot_longer(
-    cols = contains("temperature"), values_to = "value",
-    names_to = "variable") %>% 
-  group_by(variable, status) %>% 
-  mutate(
-    sample_mean = mean(value, na.rm = TRUE),
-    diff_squared = (value - sample_mean)^2
-  ) %>% 
-  summarise(
-    tss = sum(diff_squared, na.rm = TRUE)
-  )
-
-fit <- out %>% 
-  group_by(status) %>% 
-  mutate(
-    squared_error = 
-      (observed_water_temperature - simulated_water_temperature)^2 
-  ) %>% 
-  summarise(
-    sse = sum(squared_error, na.rm = TRUE),
-    mse = mean(squared_error, na.rm = TRUE)
-  ) %>% 
-  ungroup() %>% 
-  left_join(
-    filter(tss, variable == "observed_water_temperature"), 
-    by = join_by(status)
-  ) %>% 
-  mutate(
-    rmse = sqrt(mse),
-    r2 = 1 - sse / tss,
-    
-    across(.cols = where(is.numeric), .fns = ~round(.x, digits = 2))
-  ) %>% 
-  select(status, tss, sse, mse, rmse, r2)
+fit <- aw_calculate_fit(out) 
 
 fit %>% 
   datatable(options = dt_options, rownames = FALSE)
